css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Orbitron:wght@700&display=swap');

body { 
    font-family: 'Montserrat', sans-serif !important;
    overflow-x: hidden;
}

::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	border-radius: 10px;
	background-color: #181B1E;
}

::-webkit-scrollbar
{
	width: 12px;
	background-color: #181B1E;
}

::-webkit-scrollbar-thumb
{
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #448C74;
}

h1, h2, h3, h4, h5, h6, .navbar-brand {
    font-family: 'Orbitron', sans-serif !important; 
    text-transform: uppercase;
}

h2 { font-size: 40px; }

h3 { font-size: 20px; }


p, span, div, section { color: #ffffff; }

img { 
    width: 100%;
    height: 100%;
}

.bg-dark { background-color: #121519 !important; }

.bg-light-dark { background-color: #1e2125 !important; }

.btn { 
    width: 250px;
    padding: 10px 20px;
 }
 .btn-primary {
    background-color: #e9c02b;
    border: 2px solid #e9c02b !important;
    color: #121519;
    font-weight: 700 !important;
    border-radius: 100px;
 }

 .btn-primary:hover , .btn-primary:focus-visible {
    background: none !important;
    color: #e9c02b;
 }

.navbar-brand { 
    color: #448C74;
    font-size: 26px;
}

.navbar-brand:hover { color: #448C74; }

.navbar .container { padding: 0 25px 0 40px; }

.nav-item { margin: 0 15px 0 15px; }

.nav-item .active { color: #448C74 !important; }

.nav-item:last-child .nav-link { padding-right: 0 !important; }

section {
    height: 94vh;
    display: flex;
    align-items: center;
}

.row { 
    display: flex;
    justify-content: center;
 }

.col { padding: 0 40px; }

#hero {
    background-color: #448C74;
    background-image: url('/assets/pattern.png');
    background-attachment: fixed;
}

#hero .container { 
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

#hero h1 { text-align: center; }

.primary-title {
    display: block;
    font-size: 120px;
}

.secondary-title {
    display: block;
    font-size: 50px;
    letter-spacing: 7px;
}

#about .img-holder:first-child {
    height: 100%;
    background-color: #448C74;
    border-radius: 20px;

}

#about .img-holder:first-child img {
    z-index: 2;
    margin: 0 0 0 -20px;
    width: 106%;
}

#skills .col-8 .col {
    background-color: #1E2125;
    margin: 10px 10px;
    padding: 20px;
    border-radius: 20px;
    text-align: center;
}

.skills-img { 
    width: 60px;
    height: 60px;
    margin-bottom: 20px;
}

.skills-icons {
    width: 40px;
    height: 40px;
}

#portfolio p { padding-bottom: 20px; }

.modal h2 { width: 100%; }

.img-gallery {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    grid-gap: 20px;
}

.img-gallery img {
    width: 100%;
    cursor: pointer;
}

.img-thumbnail { padding: 0 !important; }

.btn-close { 
    background: none;
    color: #ffffff;
}

.btn-close:hover { color: #e9c02b; }

.btn-trigger { display: none; }

.website-display { 
    margin-top: 20%;
    background-color: #448C74;
    width: 95%;
    height: 150px;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    bottom: 0;
 }

.website-display img { 
    width: 70%;
    height: auto;
    z-index: 2;
    position: absolute;
    margin-top: -219px;
}

